--- a/Nailhang.Mongodb/project.json
+++ b/Nailhang.Mongodb/project.json
@@ -10,12 +10,14 @@
     "MongoDB.Driver.Core": "2.4.0",
     "Microsoft.Extensions.Configuration": "1.1.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "NETStandard.Library": "1.6.1",
+    "NETStandard.Library": "1.6.1"
   },
 
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50"
+    },
+    "net452": {
     }
   }
 }
