--- a/Nailhang.Tool/project.json
+++ b/Nailhang.Tool/project.json
@@ -8,13 +8,27 @@
     "Ninject": "4.0.0-beta-0134",
     "Nailhang.Mongodb": "1.0.0-*",
     "Nailhang.IndexBase": "1.0.0-*",
-    "Nailhang.Processing": "1.0.0-*",
-    "Microsoft.NETCore.App": "1.1.0"
+    "Nailhang.Processing": "1.0.0-*"    
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
+    "netcoreapp1.0": 
+    {
+      "dependencies": 
+      {
+        "Microsoft.NETCore.App": "1.1.0"
+      },
       "imports": "dnxcore50"
+    },
+    "net461": {
+      "dependencies": {
+        "Microsoft.Tpl.Dataflow": "4.5.24"
+      }
     }
-  }
+  },
+
+  "runtimes": {
+    "win10-x64": {},
+    "ubuntu.16.04-x64": {}
+  },
 }
