--- a/Nailhang.Web/project.json
+++ b/Nailhang.Web/project.json
@@ -20,23 +20,28 @@
     "Microsoft.Extensions.Logging": "1.1.0",
     "Microsoft.Extensions.Logging.Console": "1.1.0",
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
-    "Microsoft.NETCore.App": "1.1.0",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",    
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
     "BundlerMinifier.Core": "2.2.306"
   },
 
   "tools": {
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+    "BundlerMinifier.Core" : "2.2.306"
   },
 
-  "frameworks": {
+  "frameworks": {    
     "netcoreapp1.0": {
+      "dependencies": {
+        "Microsoft.NETCore.App": "1.1.0"
+      },
       "imports": [
         "dotnet5.6",
         "portable-net45+win8"
       ]
+    },
+    "net452": {
     }
   },
 
