--- a/Nailhang.Tool/project.json
+++ b/Nailhang.Tool/project.json
@@ -8,7 +8,8 @@
     "Ninject": "4.0.0-beta-0134",
     "Nailhang.Mongodb": "1.0.0-*",
     "Nailhang.IndexBase": "1.0.0-*",
-    "Nailhang.Processing": "1.0.0-*"    
+    "Nailhang.Processing": "1.0.0-*",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0"
   },
 
   "frameworks": {
