--- a/Nailhang.Tool/project.json
+++ b/Nailhang.Tool/project.json
@@ -30,6 +30,7 @@
 
   "runtimes": {
     "win10-x64": {},
-    "ubuntu.16.04-x64": {}
-  },
+    "ubuntu.16.04-x64": {},
+    "win7-x64": {}
+  }
 }
