--- a/Nailhang.Web/project.json
+++ b/Nailhang.Web/project.json
@@ -52,7 +52,8 @@
 
   "runtimes": {
     "win10-x64": {},
-    "ubuntu.16.04-x64": {}
+    "ubuntu.16.04-x64": {},
+    "win7-x64": {}
   },
 
   "runtimeOptions": {
