--- a/Nailhang.Processing/project.json
+++ b/Nailhang.Processing/project.json
@@ -14,9 +14,12 @@
 
   "frameworks": {
     "netstandard1.6": {
-      "imports": "dnxcore50"
+      "imports": "dnxcore50",
+      "dependencies": {
+      }
     },
     "net452": {
+
     }
   }
 }
