--- a/Nailhang.IndexBase/Nailhang.IndexBase.csproj
+++ b/Nailhang.IndexBase/Nailhang.IndexBase.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ninject" Version="3.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Nailhang\Nailhang.csproj" />
   </ItemGroup>
 
