--- a/Nailhang.Mongodb.Tests/Nailhang.Mongodb.Tests.csproj
+++ b/Nailhang.Mongodb.Tests/Nailhang.Mongodb.Tests.csproj
@@ -14,8 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="Ninject" Version="3.3.3" />
     <PackageReference Include="NUnit" Version="3.7.1" />
-    <PackageReference Include="Ninject" Version="4.0.0-beta-0134" />
     <PackageReference Include="dotnet-test-nunit" Version="3.4.0-beta-3" />
   </ItemGroup>
 </Project>
