--- a/Nailhang.Svn/Properties/launchSettings.json
+++ b/Nailhang.Svn/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Nailhang.Svn": {
       "commandName": "Project",
-      "commandLineArgs": "/reindex"
+      "commandLineArgs": "/reindex /revision:20350"
     }
   }
 }
