--- a/Nailhang.Mongodb.Tests/Nailhang.Mongodb.Tests.csproj
+++ b/Nailhang.Mongodb.Tests/Nailhang.Mongodb.Tests.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="dotnet-test-nunit" Version="3.4.0-beta-3" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
 </Project>
