--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <activePackageSource>
+    <add key="NuGet official package source" value="https://www.nuget.org/api/v2" />
+  </activePackageSource>
   <solution>
-    <add key="disableSourceControlIntegration" value="true" />
+    <add key="disableSourceControlIntegration" value="false" />
   </solution>
 </configuration>
