--- a/prod_appsettings.json
+++ b/prod_appsettings.json
@@ -4,7 +4,7 @@
   "IPAddress": "192.168.0.32",
   "codePage": 1251,
   "pollingPeriodSeconds": 600,
-  "repositories": ["https://192.168.0.4:8443/svn/dev3"]
+  "repositories": ["https://192.168.0.4:8443/svn/dev3"],
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
