--- a/Nailhang.Silo/Nailhang.Silo.csproj
+++ b/Nailhang.Silo/Nailhang.Silo.csproj
@@ -8,12 +8,12 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="2.0.3" />
-    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.0.*" />
-    <PackageReference Include="Orleans.Providers.MongoDB" Version="2.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="2.4.3" />
+    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.4.3" />
+    <PackageReference Include="Orleans.Providers.MongoDB" Version="2.7.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nailhang.Services.Interfaces\Nailhang.Services.Interfaces.csproj" />
