--- a/Nailhang.Tool/Nailhang.Tool.csproj
+++ b/Nailhang.Tool/Nailhang.Tool.csproj
@@ -1,9 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
-    <AssemblyName>Nailhang.Tool</AssemblyName>
-    <NoWarn>NU1605</NoWarn>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
