--- a/Nailhang.Tool/Properties/launchSettings.json
+++ b/Nailhang.Tool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Nailhang.Tool": {
       "commandName": "Project",
-      "commandLineArgs": "-file:\"C:\\Development\\Dev3\\Navigation\\bin\\Debug\\Alda.Navigation.Bootstraps.dll\" -mongo:\"mongodb://192.168.0.32\" -cecilRefPath:\"c:\\Development\\Dev3\\Navigation\\bin\\Debug\" -drop:Alda.Navigation.Bootstraps"
+      "commandLineArgs": "public -folder:\"C:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -mongo:\"mongodb://192.168.0.32\" -cecilRefPath:\"c:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\""
     }
   }
 }
