--- a/Nailhang.Tool/Properties/launchSettings.json
+++ b/Nailhang.Tool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Nailhang.Tool": {
       "commandName": "Project",
-      "commandLineArgs": "classes -folder:\"C:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -mongo:\"mongodb://192.168.0.32\" -cecilRefPath:\"c:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\""
+      "commandLineArgs": "classes -folder:\"C:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -mongo:\"mongodb://192.168.0.32\" -cecilRefPath:\"c:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -ignore:*.Mapping.dll -folderMask:Alda*.dll -drop:Alda.MultiVox"
     }
   }
 }
