--- a/Nailhang.Tool/Nailhang.Tool.csproj
+++ b/Nailhang.Tool/Nailhang.Tool.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;net461</TargetFrameworks>
+    <TargetFrameworks>net7.0</TargetFrameworks>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
