--- a/Nailhang.Tool/Properties/launchSettings.json
+++ b/Nailhang.Tool/Properties/launchSettings.json
@@ -3,6 +3,10 @@
     "Nailhang.Tool": {
       "commandName": "Project",
       "commandLineArgs": "classes -folder:\"C:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -mongo:\"mongodb://127.0.0.1\" -cecilRefPath:\"c:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -cecilRefPath:\"c:\\Development\\dev3\\References\\Release\" -ignore:*.Mapping.dll -folderMask:Alda*.dll -drop:Alda.MultiVox"
+    },
+    "scan": {
+      "commandName": "Project",
+      "commandLineArgs": "-folder:\"C:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -mongo:\"mongodb://192.168.0.32\" -cecilRefPath:\"c:\\Development\\dev3\\MultiVox\\Bin_Testing_Net40\" -cecilRefPath:\"c:\\Development\\dev3\\References\\Release\" -ignore:*.Mapping.dll -folderMask:Alda.MultiVox.Bootstraps*.dll"
     }
   }
 }
